--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
